# CS523_Fall18

./: CMakeLists.txt  README.md
0-CG/: CMakeLists.txt  Fluid.h  Fluid.h.bak  Fluid_3.h.bak  main.cpp  unitTest.cpp
0-test/: CMakeLists.txt  Fluid.h  main.cpp  testRHS.cpp
Fluid/: CG_System.h  CMakeLists.txt  Fluid.cpp  Fluid.h  FluidQuantity.cpp  FluidQuantity.cpp.bak  FluidQuantity.h  FluidQuantity.h.bak  FluidSimulator_Grid.h  FluidSolver.cpp  FluidSolver.h  LINTERunitTest.cpp  TestSet.cpp  UnitTest_Range_Iterator.cpp  UnitTest_linearInterpolate.cpp  main.cpp  note.md  projectionTest.py  tentTest.py  test.cpp  testRHS.cpp  unitTest.cpp  unitTest_Grid.cpp  unitTest_Jacobi.cpp  unitTest_computeVelocity.cpp  unitTest_indexAndOffset.cpp  unitTest_linearInterpolate.cpp
Fluid-CG/: CMakeLists.txt  output2tent.ipynb
Fluid/NovaExampleStructure/: CG_System.h  Fluid_Quantity.h  Fluid_Simulator_Driver.cpp  Fluid_Simulator_Driver.h  Fluid_Solver.cpp  Fluid_Solver.h  main_.cpp
Fluid/_Range_Iterator_/: main.cpp  unitTest.cpp
Fluid/bak/: Fluid.cpp  Fluid.h  Gauss_Seidel.cpp  display.cpp
Fluid/bak2/: FluidQuantity.cpp  FluidQuantity.h  FluidSimulator_Grid.h  FluidSolver.cpp  FluidSolver.h  main.cpp
Fluid2/: CMakeLists.txt  FluidQuantity.cpp  FluidQuantity.h  FluidSimulator_Grid.h  FluidSolver.h  main.cpp
FluidSimulator_Array_Based/: CMakeLists.txt  Fluid.h  main.cpp
FluidSimulator_Nova/: CMakeLists.txt  FluidSolver.h  unitTest.cpp
FluidSimulator_Nova/Auxiliary/: note.md  unitTest_3dTent.py
HW1/: HW1-Report.ipynb  problem1.py
HW1/.ipynb_checkpoints/: HW1-Report-checkpoint.ipynb
HW1/Cpp/: CMakeLists.txt  Makefile  RigidBody.cpp  RigidBody.h  foo  main.cpp  rotate  test.cpp
HW1/MATLAB/: getTorque.m  rotateRB.m
HW1/backup/: getRigidBodyData.cpp.bak  main.cpp.bak
HW2/: README.md
HW2/Output/: Problem1_circle.out  Problem1_cubic.out  Problem1_ellipse.out  Problem1_ellipsolid.out  Problem1_shpere.out  Problem1_square.out
HW2/Problem1/: hw2.cpp
HW2/Problem1/Cpp/: CMakeLists.txt  ClassGridUnitTest.cpp  NovaReadWrite.md  main.cpp  test.cpp
HW2/Problem1/NovaProject/: CMakeLists.txt  a.out  drawtest.cpp  hw2.cpp
HW2/Problem2/: CMakeLists.txt  Contact.cpp  Contact.h  Makefile  RigidBody.cpp  RigidBody.h  collision.cpp  main.cpp
HW2/Problem2/Cpp/: RigidBody.cpp  RigidBody.h  collision.cpp  foo  main.cpp
HW3/: CG_Driver.h  CG_Storage.h  CG_System.h  CG_Vector.h  CMakeLists.txt  README.md  main.cpp  unitTest.cpp
HW3/bak/: CG_Driver.h  CG_Storage.h  CG_Storage.h.bak  CG_System.h  CMakeLists.txt  main.cpp
HW3/bak2/: CG_Driver.h  CG_Driver.h.bak  CG_Storage.h  CG_System.h  CG_Vector.h  main.cpp  unitTest.cpp
incre/: Fluid.cpp
